Fix random scroll bar error from snotes overflow

--- a/frontend/src/styles/testimony.scss
+++ b/frontend/src/styles/testimony.scss
@@ -124,7 +124,7 @@ nav {
 .game_container {
   &__animal_image {
     position: absolute;
-    top: calc(50vh - 372px);
+    top: calc(50vh - 331px);
     width: 437px;
     padding: 1rem;
     right: 0;
@@ -369,7 +369,7 @@ nav {
 
   .game_container__animal_image {
     width: 280px;
-    top: calc(var(--vh, 1vh) * 50 - 216px);
+    top: calc(var(--vh, 1vh) * 50 - 187px);
     // width: 597px;
 
     &.left {
